spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-client-loadbalancer-it/src/test/resources/wiremock/wiremock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea-wiremock-deployment
spec:
  selector:
    matchLabels:
      app: servicea-wiremock
  template:
    metadata:
      labels:
        app: servicea-wiremock
    spec:
      containers:
        - name: servicea-wiremock
          image: wiremock/wiremock:2.32.0
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              port: 8080
              path: /__admin/mappings
          livenessProbe:
            httpGet:
              port: 8080
              path: /__admin/mappings
          ports:
            - containerPort: 8080
